--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 streamlit
 opencv-python-headless
 pytesseract
-git+https://github.com/openai/whisper.git
+openai-whisper
 moviepy
+imageio[ffmpeg]
+proglog
 torch
 transformers
 sentencepiece
