--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
 streamlit
-opencv-python-headless
-pytesseract
 openai-whisper
-moviepy
-imageio[ffmpeg]
-proglog
-torch
-transformers
+torch==2.2.2
+transformers==4.36.2
 sentencepiece
-spacy
+spacy==3.7.2
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 reportlab
