--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit
 torch
-git+https://github.com/openai/whisper.git
+whisper @ git+https://github.com/openai/whisper.git
 spacy
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 transformers
 sentencepiece
 reportlab
