--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-torch
+streamlit==1.37.0
+torch==2.2.2
+transformers==4.41.2
+sentencepiece==0.2.0
 whisper @ git+https://github.com/openai/whisper.git
-spacy
+spacy==3.7.2
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
-transformers
-sentencepiece
-reportlab
+reportlab==4.2.2
