--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 streamlit==1.38.0
 openai-whisper==20231117
 spacy==3.7.2
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 transformers==4.44.2
-torch>=2.2.0
+torch==2.1.2
 sentencepiece
 reportlab
 ffmpeg-python
