--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
 opencv-python-headless
 pytesseract
-moviepy
+moviepy==1.0.3
 git+https://github.com/openai/whisper.git
 reportlab
 transformers
